--- a/hugo.yaml
+++ b/hugo.yaml
@@ -8,8 +8,8 @@ sectionPagesMenu: main
 params:
   profileMode:
     enabled: true
-    title: Title goes here
-    subtitle: This is a subtitle
+    title: This is a title
+    subtitle: Hello 👋 This is a subtitle
     imageUrl: https://lumiere-a.akamaihd.net/v1/images/character_themuppets_kermit_b77a431b.jpeg
     imageTitle: Kermit the Frog
     imageWidth: 200 # custom size
@@ -19,8 +19,6 @@ params:
         url: "/archive"
       - name: Posts
         url: "/posts"
-      - name: Github
-        url: "https://github.com/"
 
   socialIcons: # optional
     - name: github
