--- a/hugo.yaml
+++ b/hugo.yaml
@@ -4,6 +4,9 @@ title: Chase Kanipe
 theme: papermod
 defaultContentLanguage: en
 sectionPagesMenu: main
+taxonomies:
+  category: categories
+  tag: tags
 menu:
   main:
     - identifier: about
@@ -14,22 +17,22 @@ menu:
       name: CV
       url: /cv/
       weight: 20
-    - identifier: posts
-      name: Posts
-      url: /posts/
+    - identifier: projects
+      name: Projects
+      url: /projects/
+      weight: 24
+#    - identifier: research
+#      name: Research
+#      url: /research/
+#      weight: 25
+    - identifier: music
+      name: Music
+      url: /music/
       weight: 30
-    - identifier: about
-      name: About
-      url: /about/
+    - identifier: blog
+      name: Blog
+      url: /blog/
       weight: 40
-    - identifier: search
-      name: Search
-      url: /search/
-      weight: 50
-#    - identifier: github
-#      name: Github
-#      url: https://example.org
-#      weight: 60
 params:
   profileMode:
     enabled: true
@@ -40,12 +43,12 @@ params:
     imageWidth: 250 # custom size
     imageHeight: 250 # custom size
     buttons:
+      - name: Archive
+        url: "/archives"
+      - name: Tags
+        url: "/tags"
       - name: Search
         url: "/search"
-      - name: Posts
-        url: "/posts"
-      - name: Archive
-        url: "/archive"
   socialIcons: # optional
     - name: github
       url: https://github.com/0xchase
