--- a/hugo.yaml
+++ b/hugo.yaml
@@ -48,6 +48,10 @@ menu:
 params:
   homeSubtitle: Graduate student at UMD
   enableThemeToggle: false
+  dateform: "Jan 2, 2006"
+  dateformShort: "Jan 2"
+  dateformNum: "2006-01-02"
+  dateformNumTime: "2006-01-02 15:04"
   logo:
     logoMark: "$"
     logoText: "/home/"
